--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "cluster-scanner.labels" . | nindent 4 }}
 type: Opaque
 data:
-  sysdig_access_key: {{ required "please provide a sysdig access key" .Values.global.sysdigAccessKey | b64enc | quote }}
+  sysdig_access_key: {{ required "please provide a sysdig access key" .Values.global.sysdig.accessKey | b64enc | quote }}
   js_server_password: {{ .Values.natsJS.password | default (randAlphaNum 32) | b64enc | quote }}
 {{- if .Values.cache.redis }}
   cache_redis_password: {{ .Values.cache.redis.password | b64enc | quote }}
