--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -10,7 +10,7 @@ release:
 tests:
   - it: "is a configmap with the has correct name"
     set:
-      global.sysdigHost: "http://test.com"
+      global.sysdig.apiHost: "http://test.com"
     asserts:
       - isKind:
           of: ConfigMap
@@ -23,7 +23,7 @@ tests:
 
   - it: "has correct content"
     set:
-      global.sysdigHost: "http://test.com"
+      global.sysdig.apiHost: "http://test.com"
     asserts:
       - equal:
           path: data.sysdig_host
@@ -64,7 +64,7 @@ tests:
 
   - it: "has local mode as default"
     set:
-      global.sysdigHost: "http://test.com"
+      global.sysdig.apiHost: "http://test.com"
     asserts:
       - equal:
           path: data.rsi_mode
@@ -72,7 +72,7 @@ tests:
 
   - it: "can set multi mod"
     set:
-      global.sysdigHost: "http://test.com"
+      global.sysdig.apiHost: "http://test.com"
       global.scannerMode: "multi"
     asserts:
       - equal:
@@ -81,7 +81,7 @@ tests:
 
   - it: "raise error on unknown mod"
     set:
-      global.sysdigHost: "http://test.com"
+      global.sysdig.apiHost: "http://test.com"
       global.scannerMode: "foobar"
     asserts:
       - failedTemplate:
