--- a/charts/cluster-scanner/tests/secret_test.yaml
+++ b/charts/cluster-scanner/tests/secret_test.yaml
@@ -10,7 +10,7 @@ release:
 tests:
   - it: "has correct name and namespace"
     set:
-      global.sysdigAccessKey: "secret"
+      global.sysdig.accessKey: "secret"
     asserts:
       - equal:
           path: metadata.name
@@ -21,7 +21,7 @@ tests:
 
   - it: "generates a secret resource"
     set:
-      global.sysdigAccessKey: "secret"
+      global.sysdig.accessKey: "secret"
     asserts:
       - isKind:
           of: Secret
@@ -33,7 +33,7 @@ tests:
 
   - it: "has correct default content"
     set:
-      global.sysdigAccessKey: "secret"
+      global.sysdig.accessKey: "secret"
     asserts:
       - equal:
           path: data.sysdig_access_key
@@ -46,7 +46,7 @@ tests:
 
   - it: "fills cache redis password, when set"
     set:
-      global.sysdigAccessKey: "secret"
+      global.sysdig.accessKey: "secret"
       cache.redis.password: "secret"
     asserts:
       - equal:
