--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -79,10 +79,22 @@ tests:
           path: data.rsi_mode
           value: "mcm"
 
+  - it: "can set local mod"
+    set:
+      global.sysdig.apiHost: "http://test.com"
+      global.scannerMode: "local"
+    asserts:
+      - equal:
+          path: data.rsi_mode
+          value: "sitting"
+
   - it: "raise error on unknown mod"
     set:
       global.sysdig.apiHost: "http://test.com"
       global.scannerMode: "foobar"
     asserts:
       - failedTemplate:
-          errorMessage: "invalid scannerMode, accepted options [local, multi]"
+          errorMessage: |
+            values don't meet the specifications of the schema(s) in the following chart(s):
+            cluster-scanner:
+            - global.scannerMode: global.scannerMode must be one of the following: "local", "multi"
