--- a/charts/cluster-scanner/templates/configmap.yaml
+++ b/charts/cluster-scanner/templates/configmap.yaml
@@ -6,15 +6,15 @@ metadata:
   labels:
    {{- include "cluster-scanner.labels" . | nindent 4 }}
 data:
-  sysdig_host: {{ required "please provide a sysdig host" .Values.global.sysdigHost }}
-  sysdig_skip_verify_certificate: {{ .Values.global.sysdigSkipVerifyCertificate | quote }}
-  cluster_name: {{ .Values.global.clusterName }}
+  sysdig_host: {{ include "cluster-scanner.apiHost" . }}
+  sysdig_skip_verify_certificate: {{ .Values.global.sysdig.skipVerifyCertificate | quote }}
+  cluster_name: {{ .Values.global.clusterConfig.name }}
   root_namespace: {{ .Values.rootNamespace }}
   eve_enabled: {{ .Values.eveEnabled | quote}}
   eve_integration_enabled: {{ .Values.eveIntegrationEnabled | quote }}
   logging_level: {{ .Values.global.loggingLevel }}
 {{- include "cluster-scanner.modeConfig" . | nindent 2 }}
-  js_server_user: {{ .Values.js.user }}
+  js_server_user: {{ .Values.natsJS.user }}
   js_server_url: "nats://{{- include "cluster-scanner.fullname" . }}:4222"
   rsi_leaderelection_lock_name: {{ .Values.leaderElectionLeaseNameOverride | default (include "cluster-scanner.fullname" .) }}
   rsi_leaderelection_lock_namespace: {{ .Values.leaderElectionLeaseNamespaceOverride | default .Release.Namespace }}
