--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -50,10 +50,10 @@ tests:
 
   - it: "sets tag and repository"
     set:
-      rsi.image.repository: test.com/repo
-      rsi.image.tag: rsi
-      ise.image.repository: test.com/repo
-      ise.image.tag: ise
+      runtimeStatusIntegrator.image.repository: test.com/repo
+      runtimeStatusIntegrator.image.tag: rsi
+      imageSbomExtractor.image.repository: test.com/repo
+      imageSbomExtractor.image.tag: ise
     asserts:
       - equal:
           path: spec.template.spec.containers[0].image
@@ -78,3 +78,9 @@ tests:
               secretKeyRef:
                 name: "my-secret"
                 key: .kubeconfig
+
+  - it: "has Recreate rollout strategy"
+    asserts:
+      - equal:
+          path: spec.strategy.type
+          value: Recreate
