moved inside ise/rsi config what was at top level

--- a/charts/cluster-scanner/templates/deployment.yaml
+++ b/charts/cluster-scanner/templates/deployment.yaml
@@ -78,7 +78,7 @@ spec:
           - name: SYSDIG_KUBECONFIG_CONTENT
             valueFrom:
               secretKeyRef:
-                name: {{ .Values.multicluster.kubeconfigSecretName }}
+                name: {{ .Values.runtimeStatusIntegrator.multiCluster.kubeconfigSecretName }}
                 key: .kubeconfig
           {{- end }}
           - name: SYSDIG_API_URL
