--- a/charts/cluster-scanner/tests/secret_test.yaml
+++ b/charts/cluster-scanner/tests/secret_test.yaml
@@ -47,7 +47,7 @@ tests:
   - it: "fills cache redis password, when set"
     set:
       global.sysdig.accessKey: "secret"
-      cache.redis.password: "secret"
+      imageSbomExtractor.cache.redis.password: "secret"
     asserts:
       - equal:
           path: data.cache_redis_password
