--- a/charts/cluster-scanner/templates/configmap.yaml
+++ b/charts/cluster-scanner/templates/configmap.yaml
@@ -14,13 +14,13 @@ data:
   eve_integration_enabled: {{ .Values.eveIntegrationEnabled | quote }}
   logging_level: {{ .Values.global.loggingLevel }}
 {{- include "cluster-scanner.modeConfig" . | nindent 2 }}
-  js_server_user: {{ .Values.natsJS.user }}
+  js_server_user: {{ .Values.runtimeStatusIntegrator.natsJS.user }}
   js_server_url: "nats://{{- include "cluster-scanner.fullname" . }}:4222"
-  rsi_leaderelection_lock_name: {{ .Values.leaderElectionLeaseNameOverride | default (include "cluster-scanner.fullname" .) }}
-  rsi_leaderelection_lock_namespace: {{ .Values.leaderElectionLeaseNamespaceOverride | default .Release.Namespace }}
+  rsi_leaderelection_lock_name: {{ .Values.runtimeStatusIntegrator.leaderElectionLeaseNameOverride | default (include "cluster-scanner.fullname" .) }}
+  rsi_leaderelection_lock_namespace: {{ .Values.runtimeStatusIntegrator.leaderElectionLeaseNamespaceOverride | default .Release.Namespace }}
   rsi_service_name: {{ include "cluster-scanner.fullname" . }}
 {{- include "cluster-scanner.rsiJsConfig" . | nindent 2 }}
-  ise_cache_type: {{ .Values.cache.type }}
-  ise_cache_prefix: {{ .Values.cache.prefix }}
+  ise_cache_type: {{ .Values.imageSbomExtractor.cache.type }}
+  ise_cache_prefix: {{ .Values.imageSbomExtractor.cache.prefix }}
 {{- include "cluster-scanner.iseJsConfig" . | nindent 2 }}
 {{- include "cluster-scanner.redisCacheConfig" . | nindent 2 }}
