--- a/charts/agent/tests/secure_enable_test.yaml
+++ b/charts/agent/tests/secure_enable_test.yaml
@@ -8,7 +8,9 @@ tests:
           of: ConfigMap
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: .*(?:security:\n {2}enabled:\s*true).*
+          pattern: |-
+            security:
+              enabled: true
 
   - it: Set secure.enabled=true
     set:
@@ -19,7 +21,9 @@ tests:
           of: ConfigMap
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: .*(?:security:\n {2}enabled:\s*true).*
+          pattern: |-
+            security:
+              enabled: true
 
   - it: Set secure.enabled=false
     set:
@@ -30,25 +34,39 @@ tests:
           of: ConfigMap
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: .*(?:security:\n {2}enabled:\s*false).*
+          pattern: |-
+            security:
+              enabled: false
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: commandlines_capture:\n\ {2}enabled:\ false
+          pattern: |-
+            commandlines_capture:
+              enabled: false
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: drift_killer:\n\ {2}enabled:\ false
+          pattern: |-
+            drift_killer:
+              enabled: false
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: falcobaseline:\n {2}enabled:\ false
+          pattern: |-
+            falcobaseline:
+              enabled: false
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: memdump:\n\ {2}enabled:\ false
+          pattern: |-
+            memdump:
+              enabled: false
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: network_topology:\n\ {2}enabled:\ false
+          pattern: |-
+            network_topology:
+              enabled: false
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: secure_audit_streams:\n\ {2}enabled:\ false
+          pattern: |-
+            secure_audit_streams:
+              enabled: false
 
   - it: Set secure.enabled=true and auditLog.enabled=true
     set:
@@ -61,7 +79,12 @@ tests:
           of: ConfigMap
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: security:\n\ {2}enabled:\ true\n\ {2}k8s_audit_server_enabled:\ true\n\ {2}k8s_audit_server_port:\ 7765\n\ {2}k8s_audit_server_url:\ 0\.0\.0\.0
+          pattern: |-
+            security:
+              enabled: true
+              k8s_audit_server_enabled: true
+              k8s_audit_server_port: 7765
+              k8s_audit_server_url: 0.0.0.0
 
   - it: Set secure.enabled=false and auditLog.enabled=true
     set:
@@ -91,13 +114,58 @@ tests:
           of: ConfigMap
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: 'app_checks_enabled: false\njmx:\n {2}enabled: false\nprometheus:\n {2}enabled: false\nstatsd:\n {2}enabled: false'
+          pattern: |-
+            app_checks_enabled: false
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: 'security:\n {2}enabled: true'
+          pattern: |-
+            security:
+              enabled: true
       - matchRegex:
           path: data['dragent.yaml']
-          pattern: 'commandlines_capture:\n\ {2}enabled:\ false\ndrift_killer:\n\ {2}enabled:\ false\nfalcobaseline:\n {2}enabled:\ false\nmemdump:\n\ {2}enabled:\ false\nnetwork_topology:\n\ {2}enabled:\ false\nsecure_audit_streams:\n\ {2}enabled:\ false'
+          pattern: |-
+            jmx:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            prometheus:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            statsd:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            drift_killer:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            falcobaseline:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            memdump:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            network_topology:
+              enabled: false
+      - notMatchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            commandlines_capture:
+              enabled: false
+      - notMatchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            secure_audit_streams:
+              enabled: false
 
   - it: Test secure.enabled=false when specifying secure_light mode
     set:
