--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -28,7 +28,7 @@ runtimeStatusIntegrator:
   image:
     repository: quay.io/sysdig/runtime-status-integrator
     pullPolicy: IfNotPresent
-    tag: "0.1.2-v5e3dc4c"
+    tag: "0.1.2-v42d4ca4"
 
   # Params to manage leader election
   # Leader election is implemented leveraging the native capabilities of Kubernetes
