fix(agent): fix occasional k8s_coldstart block duplication and key name
* In certain conditions when the `k8s_coldstart` parameter is manually provided
  to the agent via the `sysdig.settings` field, the top level `k8s_coldstart`
  key would be written out twice, but only one field would have the intended
  content. This fix makes the processing of the `k8s_coldstart` field consistent
  across the various conditions when it is provided and specified to ensure
  duplication no longer occurs.

* Address issues where the `max_parallel_cold_start` parameter had typos

--- a/charts/agent/tests/delegated_agent_deployment_test.yaml
+++ b/charts/agent/tests/delegated_agent_deployment_test.yaml
@@ -414,7 +414,7 @@ tests:
             k8s_coldstart:
               enabled: true
               enforce_leader_election: true
-              max_parallel_cold_starts: 1
+              max_parallel_cold_start: 1
               namespace: NAMESPACE
     template: templates/configmap-deployment.yaml
 
@@ -432,7 +432,7 @@ tests:
             k8s_coldstart:
               enabled: true
               enforce_leader_election: true
-              max_parallel_cold_starts: 1
+              max_parallel_cold_start: 1
               namespace: NAMESPACE
     template: templates/configmap-deployment.yaml
 
