--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -29,7 +29,7 @@ runtimeStatusIntegrator:
     registry: quay.io
     repository: sysdig/runtime-status-integrator
     pullPolicy: IfNotPresent
-    tag: "0.1.2-v42d4ca4"
+    tag: "0.1.0"
 
   # Params to manage leader election
   # Leader election is implemented leveraging the native capabilities of Kubernetes
@@ -72,7 +72,7 @@ imageSbomExtractor:
     registry: quay.io
     repository: sysdig/image-sbom-extractor
     pullPolicy: IfNotPresent
-    tag: "0.1.2-vb7fceb1"
+    tag: "0.1.0"
   ports:
     metrics: 25001
     probes: 7001
