fix(agent): Allow cointerface to be enabled in daemonset agents in delegated agent deployment
There exist some use cases where having cointerface enabled on both the
Deployment and DaemonSet Agents would be beneficial. This change removes the
hard requirement that cointerface is disabled in the DaemonSet. Cointerface
will remain disabled by default in the delegated agent deployments, but should
the user specify `cointerface_enabled: true` in the agent chart's
`sysdig.settings` block, cointerface will remain enabled in the DaemonSet
Agents.

--- a/charts/agent/templates/configmap.yaml
+++ b/charts/agent/templates/configmap.yaml
@@ -11,7 +11,9 @@ data:
     new_k8s: true
 {{- include "agent.clusterName" . | trim | nindent 4 }}
 {{- if .Values.delegatedAgentDeployment.enabled }}
+  {{- if not (hasKey .Values.sysdig.settings "cointerface_enabled") }}
     cointerface_enabled: false
+  {{- end }}
 {{- end }}
 {{- include "agent.connectionSettings" . | trim | nindent 4 }}
 {{- include "agent.planSettings" . | trim | nindent 4 }}
